--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,14 +1,16 @@
 use_frameworks!
 
-target 'ChainableSwift_Example', :exclusive => true do
+target 'ChainableSwift_Example' do
+  inherit! :search_paths
   pod 'ChainableSwift', :path => '../'
 
   pod 'PureLayout'
 end
 
-target 'ChainableSwift_Tests', :exclusive => true do
+target 'ChainableSwift_Tests' do
+  inherit! :search_paths
   pod 'ChainableSwift', :path => '../'
 
-  pod 'Quick', '~> 0.8'
-  pod 'Nimble', '~> 3.0'
+  pod 'Quick'
+  pod 'Nimble'
 end
